force-app/main/default/objects/Grille_Hellio__mdt/Grille_Hellio__mdt.object-meta.xml
<CustomObject>
    <label>Grille Hellio</label>
    <pluralLabel>Grilles Hellio</pluralLabel>
</CustomObject>