force-app/main/default/objects/Grille_Hellio__mdt/fields/CEE__c.field-meta.xml
<CustomField>
    <fullName>CEE__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CEE</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>