force-app/main/default/objects/Grille_Hellio__mdt/fields/Date_Debut__c.field-meta.xml
<CustomField>
    <fullName>Date_Debut__c</fullName>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>