force-app/main/default/objects/Grille_Hellio__mdt/fields/Duree_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Duree_Engagement__c</fullName>
    <label>Durée d&apos;engagement</label>
    <length>10</length>
    <type>Text</type>
</CustomField>