force-app/main/default/objects/Grille_Hellio__mdt/fields/Prix_Capa_HPH__c.field-meta.xml
<CustomField>
    <fullName>Prix_Capa_HPH__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix Capa HPH</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>