force-app/main/default/objects/Grille_Hellio__mdt/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>